--- a/index.html
+++ b/index.html
@@ -12,23 +12,36 @@
 		padding: 0;
 		line-height : 20px;
 		}
+		.line {
+			margin-left: -5px;
+		}
+		.branch {
+			margin-left: 25px;
+		}
 	</style>
 </head>
 <body>
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-12 alert alert-primary  col-md-5">
-				<span class="badge badge-primary"><h6>full_stack_learning</h6></span>
+				<span class="badge badge-primary"><h6>full stack learning Python</h6></span>
 				<div class="row">
 					<div class="col-12 alert alert-warning col-md-12">
 						<!--links: -->
 						<p>DI-Bootcamp-Stage1</p>
-						<p>│── HTML-Basics</p>
-						<p>│ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; └─ <a href="/HTML-Basics/cookies-exercise.html" target="_blank">cookies-exercise.html</a></p>
-						<p>│── HTML-Intermediate</p>
-						<p>│ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; └─ <a href="/HTML-Intermediate/programming-langages.html" target="_blank">programming-langages.html</a></p>
-						<p>│ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; └─ <a href="/HTML-Intermediate/media.html" target="_blank">media.html</a></p>
-						
+						<p>│<span class="line">──</span> HTML-Basics</p>
+						<p>│<span class="branch">└─ </span><a href="/HTML-Basics/cookies-exercise.html" target="_blank">cookies-exercise.html</a></p>
+						<p>│<span class="line">──</span> HTML-Intermediate</p>
+						<p>│<span class="branch">└─ </span><a href="/HTML-Intermediate/programming-langages.html" target="_blank">programming-langages.html</a></p>
+						<p>│<span class="branch">└─ </span><a href="/HTML-Intermediate/media.html" target="_blank">media.html</a></p>
+						<p>│<span class="line">──</span> CSS-Basics</p>
+						<p>│<span class="branch">└─ </span> Basic-Exercises</p>
+						<p>│<span class="branch">&nbsp;<!--space symbol--></span><span class="branch">│</span><span class="line">──</span> Exercise-1</p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/HTML-Intermediate/media.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/HTML-Intermediate/media.html" target="_blank">style.css</a></p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-2</p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/HTML-Intermediate/media.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/HTML-Intermediate/media.html" target="_blank">style.css</a></p>
 						<ol >
 						<!--links: -->
 							<li><a href="/exercises/HTML_Basics_Exercise.html" target="_blank">HTML Basics Exercise</a></li>
