--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
 						<p>│<span class="line">──</span> CSS-Basics</p>
 						<p>│<span class="branch">└─ </span> Basic-Exercises</p>
 						<p>│<span class="branch">&nbsp;<!--space symbol--></span><span class="branch">│</span><span class="line">──</span> Exercise-1</p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/HTML-Intermediate/media.html" target="_blank">index.html</a></p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/HTML-Intermediate/media.html" target="_blank">style.css</a></p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-1/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-1/style.css" target="_blank">style.css</a></p>
 						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-2</p>
 						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/HTML-Intermediate/media.html" target="_blank">index.html</a></p>
 						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/HTML-Intermediate/media.html" target="_blank">style.css</a></p>
