--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
 						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-1/index.html" target="_blank">index.html</a></p>
 						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-1/style.css" target="_blank">style.css</a></p>
 						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-2</p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/HTML-Intermediate/media.html" target="_blank">index.html</a></p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/HTML-Intermediate/media.html" target="_blank">style.css</a></p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-2/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-2/style.css" target="_blank">style.css</a></p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-2/fonts.css" target="_blank">fonts.css</a></p>
 						<ol >
 						<!--links: -->
 							<li><a href="/exercises/HTML_Basics_Exercise.html" target="_blank">HTML Basics Exercise</a></li>
