--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<p>│<span class="line">──</span> HTML-Basics</p>
 						<p>│<span class="branch">└─ </span><a href="/HTML-Basics/cookies-exercise.html" target="_blank">cookies-exercise.html</a></p>
 						<p>│<span class="line">──</span> HTML-Intermediate</p>
-						<p>│<span class="branch">└─ </span><a href="/HTML-Intermediate/programming-langages.html" target="_blank">programming-langages.html</a></p>
+						<p>│<span class="branch">└─ </span><a href="/HTML-Intermediate/programming-languages.html" target="_blank">programming-languages.html</a></p>
 						<p>│<span class="branch">└─ </span><a href="/HTML-Intermediate/media.html" target="_blank">media.html</a></p>
 						<p>│<span class="line">──</span> CSS-Basics</p>
 						<p>│<span class="branch">└─ </span> Basic-Exercises</p>
@@ -43,6 +43,9 @@
 						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-2/index.html" target="_blank">index.html</a></p>
 						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-2/style.css" target="_blank">style.css</a></p>
 						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-2/fonts.css" target="_blank">fonts.css</a></p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-3</p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-3/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-3/style.css" target="_blank">style.css</a></p>						
 						<ol >
 						<!--links: -->
 							<li><a href="/exercises/HTML_Basics_Exercise.html" target="_blank">HTML Basics Exercise</a></li>
