--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
 						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-3</p>
 						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-3/index.html" target="_blank">index.html</a></p>
 						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-3/style.css" target="_blank">style.css</a></p>						
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-4</p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-4/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-4/style.css" target="_blank">style.css</a></p>						
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-5</p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-5/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-5/style.css" target="_blank">style.css</a></p>						
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-6</p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-6/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-6/style.css" target="_blank">style.css</a></p>						
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-7</p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-7/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-7/style.css" target="_blank">style.css</a></p>						
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-8</p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-8/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-8/style.css" target="_blank">style.css</a></p>						
+						
 						<ol >
 						<!--links: -->
 							<li><a href="/exercises/HTML_Basics_Exercise.html" target="_blank">HTML Basics Exercise</a></li>
