--- a/index.html
+++ b/index.html
@@ -29,39 +29,44 @@
 					<div class="col-12 alert alert-warning col-md-12">
 						<!--links: -->
 						<p>DI-Bootcamp-Stage1</p>
-						<p>│<span class="line">──</span> HTML-Basics</p>
-						<p>│<span class="branch">└─ </span><a href="/HTML-Basics/cookies-exercise.html" target="_blank">cookies-exercise.html</a></p>
-						<p>│<span class="line">──</span> HTML-Intermediate</p>
-						<p>│<span class="branch">└─ </span><a href="/HTML-Intermediate/programming-languages.html" target="_blank">programming-languages.html</a></p>
-						<p>│<span class="branch">└─ </span><a href="/HTML-Intermediate/media.html" target="_blank">media.html</a></p>
+						<p>│<span class="line">── HTML-Basics</p>
+						<p>│<span class="branch">└─ <a href="/HTML-Basics/cookies-exercise.html" target="_blank">cookies-exercise.html</a></p>
+						<p>│<span class="line">── HTML-Intermediate</p>
+						<p>│<span class="branch">└─ <a href="/HTML-Intermediate/programming-languages.html" target="_blank">programming-languages.html</a></p>
+						<p>│<span class="branch">└─ <a href="/HTML-Intermediate/media.html" target="_blank">media.html</a></p>
 						<p>│<span class="line">──</span> CSS-Basics</p>
-						<p>│<span class="branch">└─ </span> Basic-Exercises</p>
-						<p>│<span class="branch">&nbsp;<!--space symbol--></span><span class="branch">│</span><span class="line">──</span> Exercise-1</p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-1/index.html" target="_blank">index.html</a></p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-1/style.css" target="_blank">style.css</a></p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-2</p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-2/index.html" target="_blank">index.html</a></p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-2/style.css" target="_blank">style.css</a></p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-2/fonts.css" target="_blank">fonts.css</a></p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-3</p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-3/index.html" target="_blank">index.html</a></p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-3/style.css" target="_blank">style.css</a></p>						
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-4</p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-4/index.html" target="_blank">index.html</a></p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-4/style.css" target="_blank">style.css</a></p>						
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-5</p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-5/index.html" target="_blank">index.html</a></p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-5/style.css" target="_blank">style.css</a></p>						
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-6</p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-6/index.html" target="_blank">index.html</a></p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-6/style.css" target="_blank">style.css</a></p>						
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-7</p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-7/index.html" target="_blank">index.html</a></p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-7/style.css" target="_blank">style.css</a></p>						
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="line">──</span> Exercise-8</p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-8/index.html" target="_blank">index.html</a></p>
-						<p>│<span class="branch">&nbsp;</span><span class="branch">│</span><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-8/style.css" target="_blank">style.css</a></p>						
-						
+						<p>│<span class="branch">│<span class="line">── Basic-Exercises</p>
+						<p>│<span class="branch">│<span class="branch">│<span class="line">── Exercise-1</p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Basics/Basic-Exercises/Exercise-1/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Basics/Basic-Exercises/Exercise-1/style.css" target="_blank">style.css</a></p>
+						<p>│<span class="branch">│<span class="branch">│<span class="line">── Exercise-2</p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Basics/Basic-Exercises/Exercise-2/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Basics/Basic-Exercises/Exercise-2/style.css" target="_blank">style.css</a></p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Basics/Basic-Exercises/Exercise-2/fonts.css" target="_blank">fonts.css</a></p>
+						<p>│<span class="branch">│<span class="branch">│<span class="line">── Exercise-3</p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Basics/Basic-Exercises/Exercise-3/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-3/style.css" target="_blank">style.css</a></p>						
+						<p>│<span class="branch">│<span class="branch">│<span class="line">── Exercise-4</p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-4/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-4/style.css" target="_blank">style.css</a></p>						
+						<p>│<span class="branch">│<span class="branch">│<span class="line">── Exercise-5</p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-5/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-5/style.css" target="_blank">style.css</a></p>						
+						<p>│<span class="branch">│<span class="branch">│<span class="line">── Exercise-6</p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-6/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-6/style.css" target="_blank">style.css</a></p>						
+						<p>│<span class="branch">│<span class="branch">│<span class="line">── Exercise-7</p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-7/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-7/style.css" target="_blank">style.css</a></p>						
+						<p>│<span class="branch">│<span class="branch"><span style="margin-left:-1.5px">└─</span><span class="line">── Exercise-8</p>
+						<p>│<span class="branch">│<span class="branch">&nbsp;&nbsp;<!-- <==spaces --><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-8/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">│<span class="branch">&nbsp;&nbsp;<!-- <==spaces --><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-8/style.css" target="_blank">style.css</a></p>						
+						<p>│<span class="branch">│<span class="line">── Challenge-One</p>
+						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Challenge-One/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Challenge-One/style.css" target="_blank">style.css</a></p>	
+						<p>│<span class="branch">│<span class="line">── Challenge-One-A</p>
+						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Challenge-One-A/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Challenge-One-A/style.css" target="_blank">style.css</a></p>
 						<ol >
 						<!--links: -->
 							<li><a href="/exercises/HTML_Basics_Exercise.html" target="_blank">HTML Basics Exercise</a></li>
