--- a/index.html
+++ b/index.html
@@ -58,15 +58,20 @@
 						<p>│<span class="branch">│<span class="branch">│<span class="line">── Exercise-7</p>
 						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-7/index.html" target="_blank">index.html</a></p>
 						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-7/style.css" target="_blank">style.css</a></p>						
-						<p>│<span class="branch">│<span class="branch"><span style="margin-left:-1.5px">└─</span><span class="line">── Exercise-8</p>
+						<p>│<span class="branch">│<span class="branch"><span style="margin-left:-1.5px">└─</span><span class="line"> Exercise-8</p>
 						<p>│<span class="branch">│<span class="branch">&nbsp;&nbsp;<!-- <==spaces --><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-8/index.html" target="_blank">index.html</a></p>
 						<p>│<span class="branch">│<span class="branch">&nbsp;&nbsp;<!-- <==spaces --><span class="branch">└─ </span><a href="/CSS-Basics/Basic-Exercises/Exercise-8/style.css" target="_blank">style.css</a></p>						
 						<p>│<span class="branch">│<span class="line">── Challenge-One</p>
 						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Challenge-One/index.html" target="_blank">index.html</a></p>
 						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Challenge-One/style.css" target="_blank">style.css</a></p>	
-						<p>│<span class="branch">│<span class="line">── Challenge-One-A</p>
-						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Challenge-One-A/index.html" target="_blank">index.html</a></p>
-						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Challenge-One-A/style.css" target="_blank">style.css</a></p>
+						<p>│<span class="branch"><span class="line">└─  Challenge-One-A</p>
+						<p>│<span class="branch">&nbsp;&nbsp;<!-- <==spaces --><span class="branch">└─ </span><a href="/CSS-Basics/Challenge-One-A/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">&nbsp;&nbsp;<!-- <==spaces --><span class="branch">└─ </span><a href="/CSS-Basics/Challenge-One-A/style.css" target="_blank">style.css</a></p>
+						<p>│<span class="line">──</span> CSS-Intermediate</p>
+						<p>│<span class="branch">│<span class="line">── Challenge-One</p>
+						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Intermediate/Challenge-One/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Intermediate/Challenge-One/style.css" target="_blank">style.css</a></p>	
+							
 						<ol >
 						<!--links: -->
 							<li><a href="/exercises/HTML_Basics_Exercise.html" target="_blank">HTML Basics Exercise</a></li>
