--- a/index.html
+++ b/index.html
@@ -71,7 +71,10 @@
 						<p>│<span class="branch">│<span class="line">── Challenge-One</p>
 						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Intermediate/Challenge-One/index.html" target="_blank">index.html</a></p>
 						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Intermediate/Challenge-One/style.css" target="_blank">style.css</a></p>	
-							
+						<p>│<span class="branch">│<span class="line">── Challenge-Two</p>
+						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Intermediate/Challenge-Two/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Intermediate/Challenge-Two/style.css" target="_blank">style.css</a></p>	
+									
 						<ol >
 						<!--links: -->
 							<li><a href="/exercises/HTML_Basics_Exercise.html" target="_blank">HTML Basics Exercise</a></li>
