added css chal 3

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<p>│<span class="branch">│<span class="line">── Challenge-One</p>
 						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Challenge-One/index.html" target="_blank">index.html</a></p>
 						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Basics/Challenge-One/style.css" target="_blank">style.css</a></p>	
-						<p>│<span class="branch"><span class="line">└─  Challenge-One-A</p>
+						<p>│<span class="branch"><span class="line" style="margin-left:-1.5px">└─  Challenge-One-A</p>
 						<p>│<span class="branch">&nbsp;&nbsp;<!-- <==spaces --><span class="branch">└─ </span><a href="/CSS-Basics/Challenge-One-A/index.html" target="_blank">index.html</a></p>
 						<p>│<span class="branch">&nbsp;&nbsp;<!-- <==spaces --><span class="branch">└─ </span><a href="/CSS-Basics/Challenge-One-A/style.css" target="_blank">style.css</a></p>
 						<p>│<span class="line">──</span> CSS-Intermediate</p>
@@ -74,8 +74,15 @@
 						<p>│<span class="branch">│<span class="line">── Challenge-Two</p>
 						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Intermediate/Challenge-Two/index.html" target="_blank">index.html</a></p>
 						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Intermediate/Challenge-Two/style.css" target="_blank">style.css</a></p>	
-									
-						<ol >
+						<p>│<span class="branch">│<span class="line">── Challenge-Three</p>
+						<p>│<span class="branch">│<span class="branch">│<span class="line">── Exercise-1</p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Intermediate/Challenge-Three/Exercise-1/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Intermediate/Challenge-Three/Exercise-1/style.css" target="_blank">style.css</a></p>
+						<p>│<span class="branch">│<span class="branch">│<span class="line">── Exercise-2</p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Intermediate/Challenge-Three/Exercise-2/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Intermediate/Challenge-Three/Exercise-2/style.css" target="_blank">style.css</a></p>
+						
+							<ol >
 						<!--links: -->
 							<li><a href="/exercises/HTML_Basics_Exercise.html" target="_blank">HTML Basics Exercise</a></li>
 							<li><a href="/exercises/HTML_intermediate_Exercise_1.html" target="_blank">HTML Intermediate Exercise 1</a></li>
