--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
 						<p>│<span class="branch">│<span class="branch">│<span class="line">── Exercise-2</p>
 						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Intermediate/Challenge-Three/Exercise-2/index.html" target="_blank">index.html</a></p>
 						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Intermediate/Challenge-Three/Exercise-2/style.css" target="_blank">style.css</a></p>
-						
+						<p>│<span class="branch">│<span class="branch">│<span class="line">── Exercise-3</p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Intermediate/Challenge-Three/Exercise-3/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Intermediate/Challenge-Three/Exercise-3/style.css" target="_blank">style.css</a></p>
+								
 							<ol >
 						<!--links: -->
 							<li><a href="/exercises/HTML_Basics_Exercise.html" target="_blank">HTML Basics Exercise</a></li>
