final pr canvas

--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
 						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Intermediate/Challenge-Three/Exercise-3/index.html" target="_blank">index.html</a></p>
 						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Intermediate/Challenge-Three/Exercise-3/style.css" target="_blank">style.css</a></p>
 						<p>│<span class="branch">│<span class="branch">│<span class="branch">└─ <a href="/CSS-Intermediate/Challenge-Three/Exercise-3/images/CSS_challenge_5.png" target="_blank">image</a></p>
+						<p>│<span class="line">──</span> Final-Project</p>
+						<p>│<span class="branch">└─ </span><a href="/Final-Project/index.html" target="_blank">index.html</a></p>
+						<p>│<span class="branch">└─ </span><a href="/Final-Project/style.css" target="_blank">style.css</a></p>
+						<p>│<span class="branch">└─ </span><a href="/Final-Project/canvas.js" target="_blank">canvas.js</a></p>
 						<p>│<span class="branch">│<span class="line">── Robot</p>		
 						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Intermediate/Robot/index.html" target="_blank">index.html</a></p>
 						<p>│<span class="branch">│<span class="branch">└─ </span><a href="/CSS-Intermediate/Robot/style.css" target="_blank">style.css</a></p>
