--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
 	<title>index</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	<!-- framework bootstrap -->
-	<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-		crossorigin="anonymous"></script> -->
 	<link rel="stylesheet" href="style.css">
 </head>
 
@@ -25,7 +21,7 @@
 		<div class="row">
 			<div class="col-12 ml-3 alert alert-warning col-md-5">
 				<!--links: -->
-				<div class="h5 mb-0">DI-Bootcamp-Stage1</div>
+				<div class="h5 mb-0" id="sticky-header">DI-Bootcamp-Stage1</div>
 				<p>│<span class="line">── HTML-Basics</p>
 				<p>│<span class="branch">└─ <a href="/HTML-Basics/cookies-exercise.html"
 							target="_blank">cookies-exercise.html</a></p>
@@ -177,25 +173,7 @@
 
 				<div class="h5 mt-3">Self-paced Courses exercises</div>
 				<ol>
-					<li><a href="/exercises/HTML_Basics_Exercise.html" target="_blank">HTML Basics Exercise</a>
-					</li>
-					<li><a href="/exercises/HTML_intermediate_Exercise_1.html" target="_blank">HTML Intermediate
-							Exercise 1</a></li>
-					<li><a href="/exercises/HTML_intermediate_Exercise_2.html" target="_blank">HTML Intermediate
-							Exercise 2</a></li>
 					<li><a href="https://flukeout.github.io/#" target="_blank">CSS online game</a></li>
-					<li><a href="/exercises/CSS_challenge_1.html" target="_blank">CSS Display Exercise 1</a>
-					</li>
-					<li><a href="/exercises/CSS_challenge_1A.html" target="_blank">CSS Display Exercise 1A</a>
-					</li>
-					<li><a href="/exercises/CSS_challenge_2.html" target="_blank">CSS Display Exercise 2</a>
-					</li>
-					<li><a href="/exercises/CSS_challenge_3.html" target="_blank">CSS Display Exercise 3</a>
-					</li>
-					<li><a href="/exercises/CSS_challenge_4.html" target="_blank">CSS Display Exercise 4</a>
-					</li>
-					<li><a href="/exercises/CSS_challenge_5.html" target="_blank">CSS Display Exercise 5</a>
-					</li>
 					<li><a href="/exercises/CSS_clock.html" target="_blank">CSS Clock</a></li>
 					<li><a href="/exercises/CSS_responsive_design_1.html" target="_blank">Responsive Design
 							Exercise 1</a></li>
@@ -207,6 +185,7 @@
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript" src="main.js"></script>
 </body>
 
 </html>
