--- a/Final-Project/index.html
+++ b/Final-Project/index.html
@@ -16,6 +16,13 @@
     crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <!-- bootstrap JavaScript Bundle with Popper (for modal)-->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
   <!-- icons -->
   <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" /> -->
   <script src="https://kit.fontawesome.com/784c01cd05.js" crossorigin="anonymous"></script>
@@ -89,7 +96,7 @@
       About
     </div>
     <!-- #region tools -->
-    <div class="row ms-1">
+    <div class="row ms-1 mb-5">
       <div class="col-2">
         <div class="flip-card-text flip-appear hidden">
           <div class="flip-card-inner flip-appear">
@@ -234,9 +241,7 @@
                 <a href="https://github.com/Chikitonik/SAP-ERP" target="_blank"> SAP ERP</a>,
                 have skills in
                 <a href="https://github.com/Chikitonik/excel-vba/" target="_blank">Excel VBA</a>
-                and in SQL queries. My new goal is to expand
-                knowledge in the Data Science field.
-                To improve and acquire the necessary knowledge I have
+                and in SQL queries. I have
                 <a href="https://github.com/Chikitonik/Chikitonik/blob/main/Roman%20Kholodkov_20222DS00255.pdf"
                   target="_blank">completed</a>
                 the online course of Yandex.practicum
@@ -271,39 +276,101 @@
         <button class="tablinks mx-4" onclick="activateTab(event, 'Data science')">Data science</button>
       </div>
     </div>
-    <!-- justify-content-center
-    align-items-center -->
-    <div id="All" class="tabcontent active">
-      <div class="row justify-content-center">
-        <div class="col-10 text-center">
-          <div class="galery-card">
-            <img src="img/avatar_rhombus.png" alt="">
+    <!-- All works -->
+    <div id="All" class="row tabcontent active justify-content-center">
+      <!-- work 1 card -->
+      <div class="row m-2 gallery-card" style="background-image: url('img/projects/house-prices-kaggle.png')">
+        <div class="row align-items-start text-center">
+          <div class="h3 col-12 card-header">House prices prediction</div>
+        </div>
+        <div class="row align-items-end justify-content-center">
+          <div id="house-prices-kaggle" class="button-gallery-card" data-toggle="modal" data-target="#modalCenter"
+            onclick=ButtonCardClick(this.id)>
+            <p>more</p>
+          </div>
+        </div>
+        <div id="house-prices-kaggle-description" class="d-none">
+          <p id="house-prices-kaggle-description-title">House prices prediction</p>
+          <p id="house-prices-kaggle-description-text">
+            Task is to build a model which will be predicting the house prices.
+            That is a competition at Kaggle (top 3%), <a
+              href="https://github.com/Chikitonik/house-prices-kaggle/blob/main/house_prices_kaggle.ipynb"
+              target="_blank"> view work</a> in the form iPython Notebook
+          </p>
+        </div>
+      </div>
+      <!-- work 2 card -->
+      <div class="row m-2 gallery-card" style="background-image: url('img/projects/taxi-orders-prediction.png')">
+        <div class="row align-items-start text-center">
+          <div class="h3 col-12 card-header">Taxi orders prediction</div>
+        </div>
+        <div class="row align-items-end justify-content-center">
+          <div id="taxi-orders-prediction" class="button-gallery-card" data-toggle="modal" data-target="#modalCenter"
+            onclick=ButtonCardClick(this.id)>
+            <p>more</p>
+          </div>
+        </div>
+        <div id="taxi-orders-prediction-description" class="d-none">
+          <p id="taxi-orders-prediction-description-title">Taxi orders prediction</p>
+          <p id="taxi-orders-prediction-description-text">
+            Task is to build a model which will have RMSE lower than 48.
+          </p>
+        </div>
+      </div>
+      <!-- modal -->
+      <!-- dynamic in ButtonCardClick -->
+      <div class="modal fade" id="modalCenter" tabindex="-1" role="dialog" aria-labelledby="modalCenterTitle"
+        aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+          <div class="modal-content">
+            <div class="modal-body pt-md-0 pb-md-5 text-center">
+              <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="10000">
+                    <img id="carousel-item-img-1" class="img-fluid d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item" data-bs-interval="2000">
+                    <img id="carousel-item-img-2" class="d-block w-100" alt="...">
+                  </div>
+                  <div class="carousel-item">
+                    <img id="carousel-item-img-3" class="d-block w-100" alt="...">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                  data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                  data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
+            </div>
+            <div class="modal-footer">
+              <div class="row">
+                <div id="modal-footer-title" class="h3"></div>
+                <div id="modal-footer-text"></div>
+              </div>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div id="Full-stack" class="tabcontent">
-      <div class="row justify-content-center">
-        <div class="col-10 text-center">
-          <div class="galery-card">
-            <img src="img/avatar_rhombus.png" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div id="Data science" class="tabcontent">
-      <div class="row justify-content-center">
-        <div class="col-10 text-center">
-          <div class="galery-card">
-            <img src="img/avatar_rhombus.png" alt="">
-          </div>
-        </div>
-      </div>
-    </div>
-
-
+      <!-- ======================================= -->
+      <!-- ======================================= -->
 
 
   </section>
@@ -332,10 +399,10 @@
       </form>
     </div>
 
-  </footer> 
+    </footer>
     <footer id="footer" class="flex-shrink-0 py-5 bg-dark">
       <div class="row justify-content-center">
-          <div class="button-footer-home" onclick="window.location.href='#home'">
+        <div class="button-footer-home" onclick="window.location.href='#home'">
           <div class="arrow">
             <div class="arrow-footer-left"></div>
             <div class="arrow-footer-right"></div>
@@ -375,7 +442,9 @@
       $('.navbar-collapse').collapse('hide');
     });
   </script>
-<link rel="stylesheet" href="style.css">
+
+  <link rel="stylesheet" href="style.css">
+
 </body>
 
 </html>
